syntax = "proto3";

package popularity;

service PopularityService {
  rpc GetMostPopularSongs (PopularityRequest) returns (PopularSongsResponse) {}
  rpc GetSongPopularity (SongPopularityRequest) returns (SongPopularityResponse) {}
  rpc GetMostPopularAlbums (PopularityRequest) returns (PopularAlbumsResponse) {}
  rpc GetAlbumPopularity (AlbumPopularityRequest) returns (AlbumPopularityResponse) {}
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {}
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}

message PopularityRequest {
  string period = 1; // e.g., "monthly", "all_time"
  int32 limit = 2;
  int32 offset = 3;
}

message SongPopularityRequest {
  string title = 1;
}

message AlbumPopularityRequest {
  string name = 1;
}

message SongPopularity {
  string title = 1;
  string artist = 2;
  int32 play_count = 3;
  int32 rank = 4;
}

message SongList {
  repeated SongPopularity songs = 1;
}

message PopularSongsResponse {
  map<string, SongList> months = 1;
}

message SongPopularityResponse {
  repeated SongPopularity rankings = 1;
}

message AlbumPopularity {
  string name = 1;
  string artist = 2;
  int32 play_count = 4;
  int32 rank = 5;
}

message AlbumPopularityResponse {
  repeated AlbumPopularity rankings = 1;
}

message PopularAlbumsResponse {
  repeated AlbumPopularity albums = 1;
}